ROC-3971 - Add warning about claim fee being non-refundable (#868)

--- a/src/main/features/claim/views/total.njk
+++ b/src/main/features/claim/views/total.njk
@@ -56,6 +56,8 @@
             </tbody>
           </table>
 
+          <p>{{ t('You can’t get the claim fee refunded. If you settle the claim out of court, you should include the fee in the settlement amount.') }}</p>
+
           <table class="table-form form-group">
             <caption class="visuallyhidden"></caption>
             <thead>
