remove link for "view the judgment" until a future story

--- a/src/main/features/dashboard/views/macro/claimStatus/ccjRequested.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/ccjRequested.njk
@@ -38,9 +38,7 @@
 
   <p>{{ t('The judgment sets out the terms of how you must pay.') }}</p>
 
-  <p><a
-      href="{{ ClaimantResponsePaths.receiptReceiver.evaluateUri({ externalId: claim.externalId }) }}">{{ t('View the judgment') }}</a> {{ t(' (PDF)') }}
-  </p>
+  <p>{{ t('View the judgment') }} {{ t(' (PDF)') }}</p>
 
   <p>{{
     t('If you repay the debt within 28 days you can ')
