--- a/src/main/features/claim/views/new-features-consent.njk
+++ b/src/main/features/claim/views/new-features-consent.njk
@@ -7,7 +7,7 @@
 <div class="grid-row">
   <div class="column-two-thirds">
     <p>{{ t('We’re continuously improving this service to reduce the need for paper forms.') }}</p>
-    <p>{{ t('You can choose to try new online features as we launch them, or to use older paper forms.') }}</p>
+    <p>{{ t('You can choose to try new online features as we launch them. We’ll tell you when new features apply to your claim.') }}</p>
     <form method="POST" novalidate class="analytics-submit-event-trigger" data-event-label-from="consentResponse" data-event-action="New features consent">
       {{ csrfProtection(csrf) }}
 
@@ -20,7 +20,7 @@
           options = [
             {
               bold: false,
-              label: 'I’ll try new online features',
+              label: 'I’ll use new online features',
               value: YesNoOption.YES.option,
               checked: (form.valueFor('consentResponse') === YesNoOption.YES)
             },
