--- a/src/main/features/offer/views/response.njk
+++ b/src/main/features/offer/views/response.njk
@@ -32,7 +32,7 @@
               label: 'Yes',
               value: StatementType.ACCEPTATION.value,
               checked: (form.valueFor('option').value === StatementType.ACCEPTATION),
-              hint: 'You can make a legal agreement between you and ' + claim.claimData.defendant.name
+              hint: 'You can make a legal agreement between you and ' + claim.claimData.defendant.name + '.'
             },
             {
               bold: false,
