--- a/src/main/features/dashboard/views/macro/claimStatus/claimFullyAdmitted.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimFullyAdmitted.njk
@@ -74,6 +74,7 @@
   {% set claimantName = claim.claimData.claimant.name %}
   {% set defendantName = claim.claimData.defendant.name %}
   {% set amount = claim.totalAmountTillToday | numeral %}
+  {% set ccjRequest = CCJPaths.paidAmountPage.evaluateUri({externalId:claim.externalId}) %}
 
   {% if claim.response.paymentIntention.paymentDate %}
     {% set paymentDate = claim.response.paymentIntention.paymentDate | date %}
@@ -86,8 +87,12 @@
     <h2 class="heading-small"> {{ t('If the defendant pays you') }} </h2>
     <p> {{ t('You need to email {{ supportMail }} to let us know. Include the date you were paid.', { supportMail: supportEmailAddress }) }} </p>
     {% if claim.response.paymentIntention.isPastPaymentDeadline %}
-      <h2 class="heading-small">{{ t('What to do if they haven’t paid') }}</h2>
-      <p> {{ t('If the defendant doesn’t pay you, you can request a County Court Judgment.') }} </p>
+      <hr>
+      <h2 class="heading-small">{{ t('Request County Court Judgment') }}</h2>
+      <p>
+        {{ t('If the defendant doesn’t pay or breaks the terms of the settlement agreement, you can '
+          + internalLink('request a County Court Judgment. ', ccjRequest )) | safe }}
+      </p>
     {% else %}
       <h2 class="heading-small">{{ t('What to do if they don’t pay') }}</h2>
       <p> {{ t('If the defendant has not paid you by {{ paymentDate }}, you can request a County Court Judgment.', { paymentDate: paymentDate}) }} </p>
