--- a/src/main/features/claimant-response/views/accept-payment-method.njk
+++ b/src/main/features/claimant-response/views/accept-payment-method.njk
@@ -21,7 +21,7 @@
             'paymentPlanTable',
             claim.response.paymentIntention.repaymentPlan.instalmentAmount,
             claim.response.paymentIntention.repaymentPlan.firstPaymentDate,
-            paymentPlan.getLastPaymentDate(),
+            paymentPlan.getLastPaymentDate(claim.response.paymentIntention.repaymentPlan.firstPaymentDate),
             paymentPlan.getPaymentLength()
           ) }}
         {% endif %}
