--- a/src/main/features/claimant-response/views/macro/termsOfAgreementTable.njk
+++ b/src/main/features/claimant-response/views/macro/termsOfAgreementTable.njk
@@ -1,25 +1,29 @@
-{% macro termsOfAgreement(id, response, paymentPlan) %}
+{% macro termsOfAgreement(id, claimantName, defendantName, paymentIntention, lastPaymentDate) %}
   <fieldset id="{{ id }}" class="form-group">
     <legend>
       <span class="visually-hidden">{{ t( 'Payment plan' ) }}</span>
     </legend>
 
-    {% if response.paymentIntention.paymentDate %}
-      {{ row('The offer', t('{{ defendantFullName }} will pay the full amount, no later than {{ paymentDate }}',
-        { defendantFullName: response.defendant.name, paymentDate: response.paymentIntention.paymentDate | date }
+    {% if paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
+      {{ row('The offer', t('{{ defendantFullName }} will pay the full amount immediately. {{ claimantFullName }} will receive the money no later than {{ paymentDate }}. Any cheques or transfers will be clear in their account by this date.',
+        { claimantFullName: claimantName, defendantFullName: defendantName, paymentDate: paymentIntention.paymentDate | date }
       )) }}
-      {{ row('Completion date', response.paymentIntention.paymentDate | date) }}
-    {% elseif response.paymentIntention.repaymentPlan %}
+      {{ row('Completion date', paymentIntention.paymentDate | date) }}
+    {% elseif paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
+      {{ row('The offer', t('{{ defendantFullName }} will pay the full amount, no later than {{ paymentDate }}.',
+        { defendantFullName: defendantName, paymentDate: paymentIntention.paymentDate | date }
+      )) }}
+      {{ row('Completion date', paymentIntention.paymentDate | date) }}
+    {% elseif paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
       {{ row('The offer', t('{{ defendantFullName }} will pay instalments of {{ instalmentAmount }} {{ paymentSchedule }}. The first instalment will be paid by {{ firstPaymentDate }}.',
-        { defendantFullName: response.defendant.name,
-          instalmentAmount: response.paymentIntention.repaymentPlan.instalmentAmount | numeral,
-          paymentSchedule: response.paymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule,
-          firstPaymentDate: response.paymentIntention.repaymentPlan.firstPaymentDate | date
+        { defendantFullName: defendantName,
+          instalmentAmount: paymentIntention.repaymentPlan.instalmentAmount | numeral,
+          paymentSchedule: paymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule,
+          firstPaymentDate: paymentIntention.repaymentPlan.firstPaymentDate | date
         }
       )) }}
-      {{ row('Completion date', paymentPlan.getLastPaymentDate(response.paymentIntention.repaymentPlan.firstPaymentDate) | date) }}
+      {{ row('Completion date', lastPaymentDate | date) }}
     {% endif %}
-
   </fieldset>
 {% endmacro %}
 
