Rename view variable name

--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -120,7 +120,7 @@
           bottomBorder = true, bold = true
         ) }}
         {{ row(label = 'Completion date',
-          value = lastPaymentDate | date,
+          value = lastInstalmentPaymentDate | date,
           bottomBorder = true, bold = true
         ) }}
       {% endif %}
