--- a/src/main/features/claimant-response/views/sign-settlement-agreement.njk
+++ b/src/main/features/claimant-response/views/sign-settlement-agreement.njk
@@ -20,7 +20,7 @@
           claimantName = claim.claimData.claimant.name,
           defendantName = claim.claimData.defendant.name,
           paymentIntention = paymentIntention,
-          lastPaymentDate = lastPaymentDate
+          lastInstalmentPaymentDate = lastInstalmentPaymentDate
         ) }}
 
         <p>{{ t('This agreement settles the claim made by {{ claimantName }} against {{ defendantName }}. This includes all money owed in the claim, for example court fees, expenses or interest.',
