--- a/src/main/features/claimant-response/views/macro/termsOfAgreementTable.njk
+++ b/src/main/features/claimant-response/views/macro/termsOfAgreementTable.njk
@@ -1,4 +1,4 @@
-{% macro termsOfAgreement(id, claimantName, defendantName, paymentIntention, lastPaymentDate) %}
+{% macro termsOfAgreement(id, claimantName, defendantName, paymentIntention, lastInstalmentPaymentDate) %}
   <fieldset id="{{ id }}" class="form-group">
     <legend>
       <span class="visually-hidden">{{ t( 'Payment plan' ) }}</span>
@@ -22,7 +22,7 @@
           firstPaymentDate: paymentIntention.repaymentPlan.firstPaymentDate | date
         }
       )) }}
-      {{ row('Completion date', lastPaymentDate | date) }}
+      {{ row('Completion date', lastInstalmentPaymentDate | date) }}
     {% endif %}
   </fieldset>
 {% endmacro %}
