--- a/src/main/features/claimant-response/views/court-offer.njk
+++ b/src/main/features/claimant-response/views/court-offer.njk
@@ -1,6 +1,6 @@
 {% extends "layout.njk" %}
 
-{% from "form.njk" import csrfProtection, submitButton, errorSummary, radioGroup, saveAndContinueButton %}
+{% from "form.njk" import csrfProtection, errorSummary, radioGroup, saveAndContinueButton %}
 {% from "./macro/repaymentPlanBlock.njk" import repaymentPlanBlock %}
 {% from "financialDetails.njk" import financialDetailsTable %}
 
