--- a/src/main/common/components/ccj/paid-amount-summary.njk
+++ b/src/main/common/components/ccj/paid-amount-summary.njk
@@ -4,79 +4,79 @@
 {% from "interestSnippet.njk" import interestSnippet %}
 
 {% block content %}
-  <div class="grid-row">
-    <div class="column-two-thirds">
+<div class="grid-row">
+  <div class="column-two-thirds">
 
-      <div class="form-group">
-        <p>
-          {{ t('Judgment will be entered against the defendant for this amount.') }}
-        </p>
-        <table class="table-form">
-          <caption class="visuallyhidden">{{ t('Amount payable by the defendant') }}</caption>
-          <thead>
-          <tr>
-            <th scope="col"></th>
-            <th class="numeric last" scope="col">{{ t('Amount') }}</th>
-          </tr>
-          </thead>
-          <tbody>
-          {% if claim.response and claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
-            {% set amount = claim.response.amount %}
-          {% else %}
-            {% set amount = claim.claimData.amount.totalAmount() %}
-          {% endif %}
+    <div class="form-group">
+      {% set total = claim.totalAmountTillToday if not amountSettledFor else amountSettledFor + (claim.claimData.feeAmountInPennies | pennies2pounds) %}
+
+      <table class="table-form">
+        <caption class="visuallyhidden">{{ t('Amount payable by the defendant') }}</caption>
+        <thead>
+        <tr>
+          <th scope="col"></th>
+          <th class="numeric last" scope="col">{{ t('Amount') }}</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% if not amountSettledFor %}
           <tr>
             <th scope="row">{{ t('Claim amount') }}</th>
             <td class="numeric last">
-              <span class="font-small">{{ amount | numeral }}</span>
+              <span class="font-small">{{ claim.claimData.amount.totalAmount() | numeral }}</span>
             </td>
           </tr>
-          {% if interestDetails %}
-            <tr>
-              <th scope="row">
-                {{ interestSnippet(label = 'Interest to date', interestDetails.rate, interestDetails.numberOfDays,
-                  interestDetails.interestFromDate, defaultJudgmentDate, interestDetails.specificDailyAmount) }}
-              </th>
-              <td class="numeric last">
-                <span class="font-small">{{ interestDetails.interest | numeral }}</span>
-              </td>
-            </tr>
-          {% endif %}
+        {% else %}
           <tr>
-            <th scope="row">{{ t('Claim fee') }}</th>
+            <th scope="row">{{ t('Amount you are settling for') }}</th>
             <td class="numeric last">
-              <span class="font-small">{{ claim.claimData.feeAmountInPennies | pennies2pounds | numeral }}</span>
+              <span class="font-small">{{ amountSettledFor | numeral }}</span>
             </td>
           </tr>
-          {% if alreadyPaid %}
-            <tr>
-              <th scope="col" class="bold-small">{{ t('Sub total') }}</th>
-              <td class="numeric last bold-small"><span
-                  id="sub-total">{{ (amount + claim.totalInterest + (claim.claimData.feeAmountInPennies / 100)) | numeral }}</span></td>
-            </tr>
-            <tr>
-              <th scope="row">{{ t('Minus amount already paid') }}</th>
-              <td class="numeric last">
-                <span class="font-small">{{ alreadyPaid | numeral }}</span>
-              </td>
-            </tr>
-          {% endif %}
-
+        {% endif %}
+        {% if not amountSettledFor and interestDetails %}
+        <tr>
+          <th scope="row">
+            {{ interestSnippet(label = 'Interest to date', interestDetails.rate, interestDetails.numberOfDays,
+              interestDetails.interestFromDate, defaultJudgmentDate, interestDetails.specificDailyAmount) }}
+          </th>
+          <td class="numeric last">
+            <span class="font-small">{{ interestDetails.interest | numeral }}</span>
+          </td>
+        </tr>
+        {% endif %}
+        <tr>
+          <th scope="row">{{ t('Claim fee') }}</th>
+          <td class="numeric last">
+            <span class="font-small">{{ claim.claimData.feeAmountInPennies | pennies2pounds | numeral }}</span>
+          </td>
+        </tr>
+        {% if alreadyPaid %}
           <tr>
-            <th scope="col" class="bold-medium">{{ t('Total') }}</th>
-            <td class="numeric last bold-medium"><span
-                id="total">{{ ((amount + claim.totalInterest + (claim.claimData.feeAmountInPennies / 100)) - alreadyPaid) | numeral }}</span>
+            <th scope="col" class="bold-small">{{ t('Sub total') }}</th>
+            <td class="numeric last bold-small"><span id="sub-total">{{ total | numeral }}</span></td>
+          </tr>
+          <tr>
+            <th scope="row">{{ t('Minus amount already paid') }}</th>
+            <td class="numeric last">
+              <span class="font-small">{{ alreadyPaid | numeral }}</span>
             </td>
           </tr>
-          </tbody>
-        </table>
-      </div>
+        {% endif %}
 
-      <div class="form-group">
-        <a class="button" href="{{ nextPageUrl }}">{{ t('Continue') }}</a>
-      </div>
+        <tr>
+          <th scope="col" class="bold-medium">{{ t('Total') }}</th>
+          <td class="numeric last bold-medium"><span id="total">{{ (total - alreadyPaid) | numeral }}</span></td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="form-group">
+      <a class="button" href="{{ nextPageUrl }}">{{ t('Continue') }}</a>
     </div>
   </div>
+</div>
 {% endblock %}
 
 
