--- a/src/main/features/dashboard/views/macro/claimStatus/offerSettlement.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/offerSettlement.njk
@@ -28,7 +28,7 @@
     {% endif %}
 
     {% if paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
-      <p>{{ t('The agreement says you’ll repay the {{ amount }} by {{ paymentDate}}.',
+      <p>{{ t('The agreement says you’ll repay {{ amount }} by {{ paymentDate}}.',
           { amount: amountToPay,
             paymentDate: claim.settlement.getLastOffer().paymentIntention.paymentDate | date
           }
