--- a/src/main/features/claim/views/claimant-details.njk
+++ b/src/main/features/claim/views/claimant-details.njk
@@ -30,7 +30,7 @@
     </div>
 
     <div class="column-one-third">
-      {{ aboutClaimWidget(user, claim, showResponse = false) }}
+      {{ aboutClaimWidget(partyType = 'claimant', claim, showResponse = false) }}
     </div>
   </div>
 {% endblock %}
