--- a/src/main/features/dashboard/views/claimant.njk
+++ b/src/main/features/dashboard/views/claimant.njk
@@ -30,7 +30,7 @@
 
     {% if claim %}
       <div class="column-one-third">
-        {{ aboutClaimWidget(user, claim) }}
+        {{ aboutClaimWidget(claim = claim, partyType = 'defendant') }}
       </div>
     {% endif %}
   </div>
