--- a/src/main/features/dashboard/views/macro/claimStatus/offerSettlement.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/offerSettlement.njk
@@ -61,6 +61,16 @@
     <p>
       {{ t('Make sure you get receipts for any payments.') }}
     </p>
+
+    <p>
+      <hr>
+    </p>
+
+    <p>
+      <h2 class="heading-small">{{ t('Request County Court Judgment') }}</h2> 
+      {{ t('If the defendant doesn’t pay or breaks the terms of the settlement agreement, you can request a County Court Judgment.') }}
+    </p>
+
   {% else %}
     <h2 class="heading-small">{{ t('Agreement signed') }}</h2>
     <p>
