Use correct apostrophe

--- a/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
@@ -90,7 +90,7 @@
       { emailAddress: supportEmailAddress, respondToMediationDeadline: claim.respondToMediationDeadline | date }) }}
   </p>
   <p>
-    {{ t('If you don't send an email before the deadline, the claim will proceed without mediation.') }}
+    {{ t('If you don’t send an email before the deadline, the claim will proceed without mediation.') }}
   </p>
   <p>
     {{ _downloadResponseLink(claim, 'Download their response') }}
