added correct CCJ link

--- a/src/main/features/dashboard/views/macro/claimStatus/offerSettlement.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/offerSettlement.njk
@@ -66,10 +66,11 @@
       <hr>
     </p>
 
-    <p>
-      <h2 class="heading-small">{{ t('Request County Court Judgment') }}</h2> 
-      {{ t('If the defendant doesn’t pay or breaks the terms of the settlement agreement, you can request a County Court Judgment.') }}
-    </p>
+   <p>
+    <h2 class="heading-small">{{ t('Request County Court Judgment') }}</h2> 
+    {{ t('If the defendant doesn’t pay or breaks the terms of the settlement agreement, you can ') }} 
+    {{ _requestCCJLink(claim) }}
+  </p>
 
   {% else %}
     <h2 class="heading-small">{{ t('Agreement signed') }}</h2>
@@ -80,6 +81,11 @@
       {{ _downloadAgreementLink(claim) }}
     </p>
   {% endif %}
+{% endmacro %}
+
+{% macro _requestCCJLink(claim) %}
+  <a class="block" href="{{ CCJPaths.paidAmountPage.evaluateUri({externalId: claim.externalId}) }}">
+ {{ t('request a County Court Judgment.') }}</a>
 {% endmacro %}
 
 {% macro _downloadAgreementLink(claim) %}
