--- a/src/main/features/claimant-response/views/part-payment-received.njk
+++ b/src/main/features/claimant-response/views/part-payment-received.njk
@@ -15,7 +15,7 @@
 
         {{
         radioGroup(
-          label = "Has the defendant paid you £" + paidAmount + "?",
+          label = "Has the defendant paid you £" + paidAmount | numeral + "?",
           name = "received",
           options = [
           {
