--- a/src/main/features/offer/views/rejected.njk
+++ b/src/main/features/offer/views/rejected.njk
@@ -13,7 +13,7 @@
 
       <h2 class="heading-medium">{{ t('What happens next') }}</h2>
       <p>
-        {{ t('You’ve rejected the defendant’s offer to settle out of court.') }}
+        {{ t('We’ll send your response to the defendant.') }}
       </p>
 
       {% include "includes/service_survey_link.njk" %}
