Update the name of the cookie

--- a/src/main/views/cookies.njk
+++ b/src/main/views/cookies.njk
@@ -144,7 +144,7 @@
           <td class="text-area">{{ t('When you close your browser') }}</td>
         </tr>
         <tr>
-          <td>eligibility-check</td>
+          <td>eligibilityCheck</td>
           <td>
             {{ t('Stores answers to eligibility questions') }}
           </td>
