--- a/src/main/common/components/payment-intention/payment-plan.njk
+++ b/src/main/common/components/payment-intention/payment-plan.njk
@@ -56,7 +56,7 @@
       <h2 class="heading-small">Length of repayment plan</h2>
       <p id="lengthOfRepayment" class="lengthOfRepayment"> {{ paymentLength | default('-') }} </p>
 
-      {{ dateInput('firstPaymentDate', form, hint = t('For example, {{ nextMonth }}', { nextMonth: 'now' | addDays(30) | inputDate }), label = 'When will you make the first payment?') }}
+      {{ dateInput('firstPaymentDate', form, hint = t('For example, {{ nextMonth }}', { nextMonth: 'now' | monthIncrement | inputDate }), label = 'When will you make the first payment?') }}
 
       {{ saveAndContinueButton() }}
     </form>
